[package]
name = "x-deleter"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
oauth = { version = "0.6.1", package = "oauth1-request" }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
